--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="Logo.png" type="image/png">
+    <img src="Logo.png" alt="Attendance Logo" style="height: 60px; margin-bottom: 10px;">
   <title>Cloud Attendance Tracker</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,6 +73,7 @@
       flex: 1;
       min-width: 100px;
     }
+
   
     @media (max-width: 600px) {
       input, button {
